added email notification alert, added /actuator endpoint, minor improvements, cleanup